k/argo-cd/resource-ingress-argo-cd.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.defn.run
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-insecure@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
